# ml4good

./: .gitignore  pyproject.toml
ml4good/cursor/: README.md  main.py  requirements.txt
ml4good/cursor/game/: ai_system.py  config.py  engine.py  tools.py  ui.py
ml4good/hyperparameters/: config.yml  hp_search.py  model.py  model.py.old  train.py
ml4good/hyperparameters/config/: core.py
ml4good/hyperparameters/processing/: loader.py
