[project]
name = "ml4good"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "optuna>=4.2.1",
    "pydantic>=2.11.3",
    "strictyaml>=1.7.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
